2012-04-02  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (TESTS): Add run-readelf-d.sh.
	(EXTRA_DIST): Add testlib_dynseg.so.bz2 and run-readelf-d.sh.
	* run-readelf-d.sh: New test.
	* run-elflint-test.sh: Check new testfile.

2012-03-21  Tom Tromey  <tromey@redhat.com>

	* typeiter.c: New file.
	* run-typeiter.sh: New file.
	* testfile59.bz2: New file.
	* Makefile.am (noinst_PROGRAMS): Add typeiter.
	(TESTS): Add run-typeiter.sh.
	(EXTRA_DIST): Add run-typeiter.sh, testfile59.bz2.
	(typeiter_LDADD): New variable.

2012-02-21  Kurt Roeckx  <kurt@roeckx.be>

	* run-alldts.sh: testrun ./alldts.

2012-02-21  Roland McGrath  <roland@hack.frob.com>

	* test-wrapper.sh: Add ${libdir}/elfutils to LD_LIBRARY_PATH.
	* test-subr.sh (installed_testrun): Likewise.

2012-01-18  Roland McGrath  <roland@hack.frob.com>

	* asm-tst4.c (main): Don't set LD_LIBRARY_PATH in system invocation;
	it will have been inherited correctly from the test harness.
	* asm-tst5.c (main): Likewise.
	* asm-tst6.c (main): Likewise.
	Reported by Serge Pavlov <serge.pavlov.at.gnu@gmail.com>.

2011-07-09  Roland McGrath  <roland@hack.frob.com>

	* sha1-tst.c: File removed.
	* Makefile.am (noinst_PROGRAMS, TESTS): Remove it.
	(sha1_tst_LDADD): Variable removed.

	* md5-sha1-test.c: New file.
	* Makefile.am [!STANDALONE] (noinst_PROGRAMS, TESTS): Add it.
	(md5_sha1_test_LDADD): New variable.

2011-05-30  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (EXTRA_DIST): Add run-readelf-twofiles.sh and
	run-rerequest_tag.sh

2011-05-24  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (EXTRA_DIST): Add hello_s390.ko.bz2.
	* run-strip-reloc.sh: Add hello_s390.ko testcase.
	* hello_s390.ko.bz2: New test file.

2011-05-23  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (TESTS): Add run-strip-reloc.sh.
	(EXTRA_DIST): Add run-strip-reloc.sh, hello_i386.ko.bz2
	hello_x86_64.ko.bz2 and hello_ppc64.ko.bz2
	* run-strip-reloc.sh: New test.
	* hello_i386.ko.bz2: New test file.
	* hello_x86_64.ko.bz2: Likewise.